# ss13roguelike

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.json  uncrustify.cfg
shaders/: triangle.vert
src/: .clang-format  AtmoModule.cpp  AtmoModule.hpp  Program.cpp  Renderer.cpp  Renderer.hpp  atmo_module.cpp  atmo_module.hpp  config.hpp  glfw_wrapper.hpp  material.cpp  material.hpp  stdafx.hpp
